# magDash

./: LICENSE  README.rst  pyproject.toml
magDash/: Conlines3.pkl  MagQuery.py  OptStandards.py  __init__.py  compute.py  data.py  main.py  plot_skyview_bokeh.py  polar.py  query.py
magDash/templates/: index.html  styles.css
