[project]
name = "magDash"
version = "0.1.0"
authors = [
	{name="Chris Burns", email="cburns@carnegiesciene.edu"},
]
description = "magDash:  Magellan Dashboard"
readme = "README.rst"
requires-python = ">=3.9.6"
keywords = ["astronomy","telescope","visualization"]
license = {filt = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Operating System :: OS Independent"
]
dependencies = [
    "oldest-supported-numpy",
    "astropy",
    "bokeh",
    "pymysql",
    "beautifulsoup4"
]

